--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,7 @@
     "react"
   ],
   "plugins": [
+    "transform-runtime",
     "transform-class-properties",
     "transform-es2015-modules-commonjs"
   ]
