Update all dependencies

--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
     "babel-runtime": "^6.26.0",
     "lodash.once": "^4.1.1",
     "merge-class-names": "^1.1.0",
-    "pdfjs-dist": "^1.9.564",
-    "prop-types": ">=15.5",
-    "react": ">=15.5",
-    "react-dom": ">=15.5",
+    "pdfjs-dist": "^1.9.602",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "webpack": "^2.7.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.0",
+    "babel-eslint": "^8.0.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -55,7 +55,7 @@
     "eslint-plugin-class-property": "^1.0.6",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.3.0"
+    "eslint-plugin-react": "^7.4.0"
   },
   "files": [
     "LICENSE",
