--- a/sample/package.json
+++ b/sample/package.json
@@ -11,8 +11,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "react": ">=15.5",
-    "react-dom": ">=15.5",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-pdf": "../"
   },
   "devDependencies": {
