Set sample and test suites to private packages

--- a/sample/package.json
+++ b/sample/package.json
@@ -2,6 +2,7 @@
   "name": "react-pdf-sample-page",
   "version": "2.1.2",
   "description": "A sample page for React-PDF.",
+  "private": true,
   "scripts": {
     "build": "webpack"
   },
