Allow React 15.5 in dependencies

--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "lodash.once": "^4.1.1",
     "merge-class-names": "^1.1.0",
     "pdfjs-dist": "^1.9.602",
-    "prop-types": "^15.6.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "prop-types": ">=15.5",
+    "react": ">=15.5",
+    "react-dom": ">=15.5",
     "webpack": "^2.7.0"
   },
   "devDependencies": {
