--- a/package.json
+++ b/package.json
@@ -10,19 +10,35 @@
     "prepublishOnly": "npm run build",
     "test": "npm run eslint"
   },
-  "keywords": ["pdf", "pdf-viewer", "react"],
+  "keywords": [
+    "pdf",
+    "pdf-viewer",
+    "react"
+  ],
   "author": {
     "name": "Wojciech Maj",
     "email": "kontakt@wojtekmaj.pl"
   },
   "contributors": [
     {
-      "name": "Niklas Närhinen",
-      "email": "niklas@narhinen.net"
+      "name": "Anenth",
+      "email": "anenthvishnu@gmail.com"
+    },
+    {
+      "name": "Artur Termenji",
+      "email": "atermenji@gmail.com"
     },
     {
       "name": "Bart Van Houtte",
       "email": "bart.van.houtte@ading.be"
+    },
+    {
+      "name": "Niklas Närhinen",
+      "email": "niklas@narhinen.net"
+    },
+    {
+      "name": "Thomas McCarthy",
+      "email": "tom@tomm.cc"
     }
   ],
   "license": "MIT",
@@ -55,7 +71,12 @@
     "react": "^15.5.0 || ^16.0.0",
     "react-dom": "^15.5.0 || ^16.0.0"
   },
-  "files": ["LICENSE", "README.md", "build/", "src/"],
+  "files": [
+    "LICENSE",
+    "README.md",
+    "build/",
+    "src/"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/wojtekmaj/react-pdf.git"
