Add Felipe Lacerda to contributors

--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
       "email": "bart.van.houtte@ading.be"
     },
     {
+      "name": "Felipe Lacerda",
+      "email": "fegolac@gmail.com"
+    },
+    {
       "name": "Niklas Närhinen",
       "email": "niklas@narhinen.net"
     },
