--- a/sample/package.json
+++ b/sample/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pdf-sample-page",
-  "version": "2.2.0-beta",
+  "version": "2.2.0-beta.2",
   "description": "A sample page for React-PDF.",
   "private": true,
   "scripts": {
