--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "lodash.once": "^4.1.1",
     "merge-class-names": "^1.1.1",
     "pdfjs-dist": "^1.9.630",
-    "prop-types": ">=15.5"
+    "prop-types": ">=15.5",
+    "react": ">=15.5",
+    "react-dom": ">=15.5"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -70,10 +72,6 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "webpack": "^3.6.0"
-  },
-  "peerDependencies": {
-    "react": "^15.5.0 || ^16.0.0",
-    "react-dom": "^15.5.0 || ^16.0.0"
   },
   "files": [
     "LICENSE",
