--- a/package.json
+++ b/package.json
@@ -5,10 +5,23 @@
   "main": "build/entry.js",
   "es6": "src/entry.js",
   "scripts": {
-    "build": "babel ./src -d ./build --copy-files",
-    "eslint": "eslint ./src",
+    "build": "babel ./src -d ./build --copy-files --ignore **/__tests__",
     "prepublishOnly": "npm run build",
-    "test": "npm run eslint"
+    "test": "npm run test-eslint && npm run test-jest",
+    "test-eslint": "eslint ./src",
+    "test-jest": "jest",
+    "test-jest-coverage": "jest --coverage"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "**/src/**.{js,jsx}",
+      "!**/src/entry.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    },
+    "setupFiles": ["./enzyme.config.js"],
+    "testPathIgnorePatterns": ["_pdf.buffer.js"]
   },
   "keywords": [
     "pdf",
@@ -65,12 +78,16 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-class-property": "^1.0.6",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "jest": "^21.2.1",
+    "react-test-renderer": "^16.1.1",
     "webpack": "^3.8.1"
   },
   "files": [
