--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "moduleNameMapper": {
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
     },
-    "setupFiles": ["./enzyme.config.js"],
-    "testPathIgnorePatterns": ["_pdf.buffer.js"]
+    "setupFiles": [
+      "./enzyme.config.js"
+    ],
+    "testPathIgnorePatterns": [
+      "_pdf.buffer.js"
+    ]
   },
   "keywords": [
     "pdf",
@@ -86,7 +90,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "jest": "^21.2.1",
+    "jest": "^21.3.0-beta.8",
     "react-test-renderer": "^16.1.1",
     "webpack": "^3.8.1"
   },
