--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "test-jest-coverage": "jest --coverage"
   },
   "jest": {
+    "setupFiles": [
+      "<rootDir>/jest.setup.js"
+    ],
     "collectCoverageFrom": [
       "**/src/**.{js,jsx}",
       "!**/src/entry.js"
@@ -20,9 +23,6 @@
     "moduleNameMapper": {
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
     },
-    "setupFiles": [
-      "./enzyme.config.js"
-    ],
     "testPathIgnorePatterns": [
       "_pdf.buffer.js"
     ]
@@ -67,7 +67,7 @@
     "babel-runtime": "^6.26.0",
     "lodash.once": "^4.1.1",
     "merge-class-names": "^1.1.1",
-    "pdfjs-dist": "^2.0.120",
+    "pdfjs-dist": "^2.0.243",
     "prop-types": ">=15.5",
     "react": ">=15.5",
     "react-dom": ">=15.5"
@@ -75,24 +75,25 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.2",
+    "babel-eslint": "^8.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
-    "eslint": "^4.11.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.14.0",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-class-property": "^1.0.6",
+    "eslint-plugin-class-property": "^1.1.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "jest": "^21.3.0-beta.8",
-    "react-test-renderer": "^16.1.1",
-    "webpack": "^3.8.1"
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
+    "jest": "^22.0.4",
+    "jest-cli": "^22.0.4",
+    "react-test-renderer": "^16.2.0",
+    "webpack": "^3.10.0"
   },
   "files": [
     "LICENSE",
