--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,13 @@
+env:
+  global:
+    - CC_TEST_REPORTER_ID=cda02494b1addb412c5b89c28db182c78f7e040cc1af0029b4c0464857026f6b
 language: node_js
 node_js: "node"
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - npm run test-jest-coverage
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
