--- a/sample/webpack/package.json
+++ b/sample/webpack/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-pdf": "../"
+    "react-pdf": "../../"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -22,7 +22,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "copy-webpack-plugin": "^4.3.1",
