--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
+.cache
 .vscode
-build
+dist
+coverage
 node_modules
-sample/build
+sample/dist
 sample/package-lock.json
-test/build
+test/dist
 test/package-lock.json
 test_pdfs
 npm-debug.log
