--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/entry.js",
   "es6": "src/entry.js",
   "scripts": {
-    "build": "babel ./src -d ./dist --copy-files --ignore **/__tests__",
+    "build": "npm run build-js && npm run copy-styles",
+    "build-js": "babel src -d dist --ignore **/__tests__",
+    "copy-styles": "node ./copy-styles.js",
     "prepublishOnly": "npm run build",
     "test": "npm run test-eslint && npm run test-jest",
     "test-eslint": "eslint ./src",
