--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "lodash.once": "^4.1.1",
     "merge-class-names": "^1.1.1",
     "pdfjs-dist": "^2.0.243",
-    "prop-types": ">=15.5",
+    "prop-types": "^15.6.0",
     "react": ">=15.5",
     "react-dom": ">=15.5"
   },
@@ -93,7 +93,7 @@
     "eslint-plugin-class-property": "^1.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-react": "^7.6.0",
     "jest": "^22.1.4",
     "jest-cli": "^22.1.4",
     "react-test-renderer": "^16.2.0",
