--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-pdf",
   "version": "3.0.0-alpha.3",
-  "description": "Easily display PDF files in your React application.",
+  "description": "Display PDFs in your React app as easily as if they were images.",
   "main": "dist/entry.js",
   "es6": "src/entry.js",
   "scripts": {
