--- a/sample/package.json
+++ b/sample/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-pdf": "../"
+    "react-pdf": "latest"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
