Add Julia Kieserman to contributors

--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
       "email": "fegolac@gmail.com"
     },
     {
+      "name": "Julia Kieserman"
+    },
+    {
       "name": "Niklas Närhinen",
       "email": "niklas@narhinen.net"
     },
