--- a/package.json
+++ b/package.json
@@ -75,9 +75,7 @@
     "lodash.once": "^4.1.1",
     "merge-class-names": "^1.1.1",
     "pdfjs-dist": "2.0.305",
-    "prop-types": "^15.6.0",
-    "react": ">=15.5",
-    "react-dom": ">=15.5"
+    "prop-types": "^15.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -99,8 +97,14 @@
     "eslint-plugin-react": "^7.6.0",
     "jest": "^22.1.4",
     "jest-cli": "^22.1.4",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "react-test-renderer": "^16.2.0",
     "webpack": "^3.10.0"
+  },
+  "peerDependencies": {
+    "react": ">=15.5",
+    "react-dom": ">=15.5"
   },
   "files": [
     "LICENSE",
