--- a/sample/webpack/package.json
+++ b/sample/webpack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-pdf-sample-page",
-  "version": "3.0.0-alpha.4",
+  "version": "3.0.0-beta",
   "description": "A sample page for React-PDF.",
   "private": true,
   "scripts": {
