Fix warning during Jest tests about duplicated package names

--- a/sample/parcel/package.json
+++ b/sample/parcel/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-pdf-sample-page",
+  "name": "react-pdf-sample-page-parcel",
   "version": "3.0.0",
   "description": "A sample page for React-PDF.",
   "private": true,
