--- a/package.json
+++ b/package.json
@@ -100,13 +100,13 @@
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.2",
     "jest-cli": "^22.4.2",
-    "react": "^16.3.0-alpha.3",
-    "react-dom": "^16.3.0-alpha.3",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
     "webpack": "^3.11.0"
   },
   "peerDependencies": {
-    "react": "^16.3.0-alpha.3",
-    "react-dom": "^16.3.0-alpha.3"
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0"
   },
   "files": [
     "LICENSE",
