--- a/package.json
+++ b/package.json
@@ -105,8 +105,8 @@
     "webpack": "^3.11.0"
   },
   "peerDependencies": {
-    "react": ">=15.5",
-    "react-dom": ">=15.5"
+    "react": "^15.5 || ^16.0",
+    "react-dom": "^15.5 || ^16.0"
   },
   "files": [
     "LICENSE",
