Use make-event-props for creating eventProps on Document, Page and Outline

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "lodash.once": "^4.1.1",
+    "make-event-props": "^1.0.0",
     "merge-class-names": "^1.1.1",
     "pdfjs-dist": "^2.0.474",
     "prop-types": "^15.6.1"
