--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ env:
   global:
     - CC_TEST_REPORTER_ID=cda02494b1addb412c5b89c28db182c78f7e040cc1af0029b4c0464857026f6b
 language: node_js
-node_js: "10"
+node_js: "node"
 cache:
   directories:
     - node_modules
