Add Lucas Simkins to contributors

--- a/package.json
+++ b/package.json
@@ -63,6 +63,10 @@
       "email": "kieserman.julia@gmail.com"
     },
     {
+      "name": "Lucas Simkins",
+      "email": "lucas.simkins@gmail.com"
+    },
+    {
       "name": "Niklas Närhinen",
       "email": "niklas@narhinen.net"
     },
