Change npm run into yarn run

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "dist/entry.js",
   "es6": "src/entry.js",
   "scripts": {
-    "build": "npm run build-js && npm run copy-styles",
+    "build": "yarn run build-js && yarn run copy-styles",
     "build-js": "babel src -d dist --ignore __tests__",
     "copy-styles": "node ./copy-styles.js",
-    "prepublishOnly": "npm run build",
-    "test": "npm run test-eslint && npm run test-jest",
+    "prepublishOnly": "yarn run build",
+    "test": "yarn run test-eslint && yarn run test-jest",
     "test-eslint": "eslint ./src",
     "test-jest": "jest",
     "test-jest-coverage": "jest --coverage"
