Update less in sample and test suites

--- a/sample/parcel/package.json
+++ b/sample/parcel/package.json
@@ -30,7 +30,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
-    "less": "^3.0.1",
+    "less": "~3.7.1",
     "parcel-bundler": "1.5.1"
   }
 }
