--- a/sample/webpack/package.json
+++ b/sample/webpack/package.json
@@ -33,7 +33,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^1.1.11",
-    "less": "^3.0.1",
+    "less": "~3.7.1",
     "less-loader": "^4.1.0",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
