Get rid of babel-preset-stage-3

--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,11 @@
 {
   "presets": [
     "env",
-    "stage-3",
     "react"
   ],
   "plugins": [
     "transform-runtime",
-    "transform-class-properties"
+    "transform-class-properties",
+    "transform-object-rest-spread"
   ]
 }
