--- a/package.json
+++ b/package.json
@@ -89,9 +89,9 @@
     "babel-eslint": "^8.2.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
     "enzyme": "^3.4.0",
     "enzyme-adapter-react-16": "^1.2.0",
     "eslint": "^4.19.1",
