Clean dist before build

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "build": "yarn run build-js && yarn run copy-styles",
     "build-js": "babel src -d dist --ignore __tests__",
+    "clean": "rimraf dist",
     "copy-styles": "node ./copy-styles.js",
-    "prepublishOnly": "yarn run build",
+    "prepublishOnly": "yarn run clean && yarn run build",
     "test": "yarn run test-eslint && yarn run test-jest",
     "test-eslint": "eslint src/ test/ --ext .jsx,.js",
     "test-jest": "jest",
@@ -88,8 +89,8 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.4.0",
@@ -103,6 +104,7 @@
     "jest-cli": "^23.5.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "rimraf": "^2.6.2",
     "webpack": "^4.6.15"
   },
   "peerDependencies": {
