--- a/sample/webpack/package.json
+++ b/sample/webpack/package.json
@@ -12,13 +12,13 @@
   },
   "license": "MIT",
   "dependencies": {
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
     "react-pdf": "latest"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
+    "babel-eslint": "^9.0.0",
     "babel-loader": "^7.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -26,17 +26,17 @@
     "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
-    "eslint": "^4.19.1",
+    "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
-    "file-loader": "^1.1.11",
-    "less": "~3.7.1",
+    "file-loader": "^2.0.0",
+    "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "style-loader": "^0.22.1",
+    "style-loader": "^0.23.0",
     "url-loader": "^1.1.1",
-    "webpack": "^4.16.5",
+    "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0"
   }
 }
