Roll back to babel-runtime 6.x because of pdf.js dependency
Related to #310
To be rolled back after PDF.js 2.1.x release

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.0.0",
+    "babel-runtime": "^6.26.0",
     "lodash.once": "^4.1.1",
     "make-event-props": "^1.1.0",
     "merge-class-names": "^1.1.1",
