Add Robert Scott to contributors, add documentation

--- a/package.json
+++ b/package.json
@@ -71,6 +71,10 @@
       "email": "niklas@narhinen.net"
     },
     {
+      "name": "Robert Scott",
+      "email": "rs@robsco.info"
+    },
+    {
       "name": "Thomas McCarthy",
       "email": "tom@tomm.cc"
     }
