Update ESLint, update commands to more standard ones

--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "main": "dist/entry.js",
   "source": "src/entry.js",
   "scripts": {
-    "build": "yarn run build-js && yarn run copy-styles",
+    "build": "yarn build-js && yarn copy-styles",
     "build-js": "babel src -d dist --ignore **/__tests__",
     "clean": "rimraf dist",
     "copy-styles": "node ./copy-styles.js",
-    "prepublishOnly": "yarn run clean && yarn run build",
-    "test": "yarn run test-eslint && yarn run test-jest",
-    "test-eslint": "eslint sample/ src/ test/ --ext .jsx,.js",
-    "test-jest": "jest",
-    "test-jest-coverage": "jest --coverage"
+    "jest": "jest",
+    "jest-coverage": "jest --coverage",
+    "lint": "eslint sample/ src/ test/ --ext .jsx,.js",
+    "prepublishOnly": "yarn clean && yarn build",
+    "test": "yarn lint && yarn jest"
   },
   "jest": {
     "setupFiles": [
@@ -97,14 +97,14 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.0",
     "babel-jest": "^24.0.0",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "eslint": "^5.11.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "jest": "^24.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.14.2",
+    "jest": "^24.8.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-test-renderer": "^16.7.0",
