--- a/sample/parcel/package.json
+++ b/sample/parcel/package.json
@@ -18,10 +18,10 @@
     "react-pdf": "latest"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.5.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/plugin-transform-runtime": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.0",
     "eslint": "^5.16.0",
@@ -30,6 +30,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.14.2",
     "less": "^3.8.1",
-    "parcel-bundler": "^1.12.0"
+    "parcel-bundler": "1.12.2"
   }
 }
