--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0",
     "lodash.once": "^4.1.1",
+    "make-cancellable-promise": "^1.0.0",
     "make-event-props": "^1.1.0",
     "merge-class-names": "^1.1.1",
     "pdfjs-dist": "2.1.266",
