--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,12 +7,15 @@
   },
   "parser": "babel-eslint",
   "rules": {
+    "arrow-parens": ["error", "as-needed", {
+      "requireForBlockBody": true
+    }],
     "jsx-a11y/label-has-associated-control": ["error", { "required": { "some": ["id", "nesting"] }}],
-    "jsx-a11y/label-has-for": ["error", { "required": { "some": ["id", "nesting"] }}],
     "no-param-reassign": ["error", { "props": true, "ignorePropertyModificationsFor": ["canvas", "element", "svg"] }],
     "no-underscore-dangle": ["error", { "allow": ["_pdfInfo", "_pageInfo"] }],
     "prefer-destructuring": "warn",
     "prefer-spread": "warn",
+    "react/jsx-props-no-spreading": "off",
     "react/jsx-sort-props": ["error", {
       "reservedFirst": ["key"]
     }],
