--- a/sample/parcel/package.json
+++ b/sample/parcel/package.json
@@ -24,6 +24,6 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "less": "^3.8.1",
-    "parcel-bundler": "1.12.2"
+    "parcel-bundler": "^1.12.4"
   }
 }
