[breaking] Create ESM builds  (#429)
* Create ESM builds

* v4.2.0-beta

* Update documentation for ES6 modules

--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "react-pdf",
   "version": "4.2.0",
   "description": "Display PDFs in your React app as easily as if they were images.",
-  "main": "dist/entry.js",
+  "main": "dist/umd/entry.js",
+  "module": "dist/esm/entry.js",
   "source": "src/entry.js",
   "scripts": {
-    "build": "yarn build-js && yarn copy-styles",
-    "build-js": "babel src -d dist --ignore **/*.spec.js,**/*.spec.jsx",
+    "build": "yarn build-js-all && yarn copy-styles",
+    "build-js-all": "yarn build-js-esm && yarn build-js-umd",
+    "build-js-esm": "BABEL_ENV=production-esm babel src -d dist/esm --ignore **/*.spec.js,**/*.spec.jsx",
+    "build-js-umd": "BABEL_ENV=production-umd babel src -d dist/umd --ignore **/*.spec.js,**/*.spec.jsx",
     "clean": "rimraf dist",
     "copy-styles": "node ./copy-styles.js",
     "jest": "jest",
