Update pdfjs-dist to 2.4.456 (#583)
* Update pdfjs-dist to 2.4.456

Co-authored-by: Kyle Mellander <kylemellander@users.noreply.github.com>

* Continue using ES5 builds by default

Co-authored-by: Kyle Mellander <kylemellander@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -88,8 +88,9 @@
     "make-cancellable-promise": "^1.0.0",
     "make-event-props": "^1.1.0",
     "merge-class-names": "^1.1.1",
-    "pdfjs-dist": "2.3.200",
-    "prop-types": "^15.6.2"
+    "pdfjs-dist": "2.4.456",
+    "prop-types": "^15.6.2",
+    "worker-loader": "^2.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.0",
