--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
     }],
     "jsx-a11y/label-has-associated-control": ["error", { "required": { "some": ["id", "nesting"] }}],
     "no-param-reassign": ["error", { "props": true, "ignorePropertyModificationsFor": ["canvas", "element", "svg"] }],
-    "no-underscore-dangle": ["error", { "allow": ["_pdfInfo", "_pageInfo"] }],
+    "no-underscore-dangle": ["error", { "allow": ["_pdfInfo", "_pageIndex", "_pageInfo"] }],
     "react/jsx-props-no-spreading": "off",
     "react/jsx-sort-props": ["error", {
       "reservedFirst": ["key"]
