Add funding to package.json

--- a/package.json
+++ b/package.json
@@ -124,5 +124,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/wojtekmaj/react-pdf.git"
-  }
+  },
+  "funding": "https://github.com/wojtekmaj/react-pdf?sponsor=1"
 }
