Turn on jest env in test files only

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,7 @@
   "extends": "airbnb",
   "env": {
     "browser": true,
-    "es6": true,
-    "jest": true
+    "es6": true
   },
   "parser": "babel-eslint",
   "rules": {
@@ -23,6 +22,16 @@
     "react/state-in-constructor": ["error", "never"]
   },
   "overrides": [
+    {
+      "files": [
+        "**/*.spec.js",
+        "**/*.spec.jsx",
+        "**/__tests__/*"
+      ],
+      "env": {
+        "jest": true
+      }
+    },
     {
       "files": [
         "sample/**",
