--- a/package.json
+++ b/package.json
@@ -114,7 +114,7 @@
     "react-dom": "^16.7.0",
     "react-test-renderer": "^16.7.0",
     "rimraf": "^3.0.0",
-    "webpack": "^4.35.0"
+    "webpack": "^5.0.0-0"
   },
   "peerDependencies": {
     "react": "^16.3.0",
