--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "make-cancellable-promise": "^1.0.0",
     "make-event-props": "^1.1.0",
     "merge-class-names": "^1.1.1",
+    "merge-refs": "^1.0.0",
     "pdfjs-dist": "2.4.456",
     "prop-types": "^15.6.2",
     "worker-loader": "^3.0.0"
