--- a/package.json
+++ b/package.json
@@ -118,8 +118,8 @@
     "webpack": "^5.0.0-0"
   },
   "peerDependencies": {
-    "react": "^16.3.0",
-    "react-dom": "^16.3.0"
+    "react": "^16.3.0 || ^17.0.0-0",
+    "react-dom": "^16.3.0 || ^17.0.0-0"
   },
   "files": [
     "LICENSE",
