Turn on jest env in test-utils.js

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,8 @@
       "files": [
         "**/*.spec.js",
         "**/*.spec.jsx",
-        "**/__tests__/*"
+        "**/__tests__/*",
+        "test-utils.js"
       ],
       "env": {
         "jest": true
