--- a/package.json
+++ b/package.json
@@ -104,12 +104,8 @@
     "cross-env": "^7.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "~7.2.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jsx-a11y": "^6.3.0",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
+    "eslint": "^7.12.0",
+    "eslint-config-wojtekmaj": "^0.4.0",
     "jest": "^26.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
