--- a/sample/webpack/package.json
+++ b/sample/webpack/package.json
@@ -4,7 +4,8 @@
   "description": "A sample page for React-PDF.",
   "private": true,
   "scripts": {
-    "build": "webpack"
+    "build": "NODE_ENV=production webpack",
+    "start": "NODE_ENV=development webpack serve"
   },
   "author": {
     "name": "Wojciech Maj",
@@ -12,25 +13,25 @@
   },
   "license": "MIT",
   "dependencies": {
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-pdf": "latest"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.2",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^1.0.0",
-    "file-loader": "^2.0.0",
-    "less": "^3.8.1",
-    "less-loader": "^4.1.0",
-    "style-loader": "^0.23.0",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.1"
+    "@babel/core": "^7.12.0",
+    "@babel/preset-env": "^7.12.0",
+    "@babel/preset-react": "^7.12.0",
+    "babel-loader": "^8.0.0",
+    "copy-webpack-plugin": "^6.3.0",
+    "css-loader": "^4.3.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.4.0",
+    "less": "^3.12.0",
+    "less-loader": "^7.0.0",
+    "style-loader": "^1.2.0",
+    "url-loader": "^4.1.0",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
