--- a/package.json
+++ b/package.json
@@ -100,14 +100,14 @@
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.3.1",
     "babel-eslint": "^10.0.0",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^7.12.0",
     "eslint-config-wojtekmaj": "^0.5.0",
     "jest": "^26.0.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-test-renderer": "^16.7.0",
     "rimraf": "^3.0.0",
     "webpack": "^5.0.0-0"
