--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "react-dom": "^17.0.0",
     "react-test-renderer": "^16.7.0",
     "rimraf": "^3.0.0",
-    "webpack": "^5.0.0-0"
+    "webpack": "^5.4.0"
   },
   "peerDependencies": {
     "react": "^16.3.0 || ^17.0.0-0",
