--- a/sample/parcel/package.json
+++ b/sample/parcel/package.json
@@ -23,5 +23,8 @@
     "@babel/preset-react": "^7.12.0",
     "less": "^4.0.0",
     "parcel-bundler": "^1.12.4"
+  },
+  "resolutions": {
+    "semver@7.0.0": "^7.0.0"
   }
 }
