Add Dmitry Ivakhnenko to contributors

--- a/package.json
+++ b/package.json
@@ -58,6 +58,10 @@
       "email": "bart.van.houtte@ading.be"
     },
     {
+      "name": "Dmitry Ivakhnenko",
+      "email": "jeetiss@yandex.ru"
+    },
+    {
       "name": "Felipe Lacerda",
       "email": "fegolac@gmail.com"
     },
