Use file-loader, not worker-loader, for default Webpack entry (#756)
In test directory:
Before: 3 729 618 B, 19500 ms compilation time
After: 3 729 459, 11200 ms compilation time

--- a/package.json
+++ b/package.json
@@ -89,13 +89,13 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.0.0",
+    "file-loader": "^6.0.0",
     "make-cancellable-promise": "^1.0.0",
     "make-event-props": "^1.1.0",
     "merge-class-names": "^1.1.1",
     "merge-refs": "^1.0.0",
     "pdfjs-dist": "2.6.347",
-    "prop-types": "^15.6.2",
-    "worker-loader": "^3.0.0"
+    "prop-types": "^15.6.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.0",
