--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
     "babel-eslint": "^10.0.0",
     "enzyme": "^3.10.0",
-    "eslint": "^7.12.0",
+    "eslint": "~7.19.0",
     "eslint-config-wojtekmaj": "^0.5.0",
     "jest": "^26.6.0",
     "react": "^17.0.0",
@@ -120,7 +120,6 @@
     "react-dom": "^16.3.0 || ^17.0.0-0"
   },
   "resolutions": {
-    "rimraf@2.6.3": "^2.6.3",
     "semver@7.0.0": "^7.0.0"
   },
   "files": [
