Remove unnecessary Babel plugin

--- a/.babelrc
+++ b/.babelrc
@@ -4,18 +4,18 @@
     "@babel/react"
   ],
   "plugins": [
-    "@babel/transform-runtime",
-    "@babel/proposal-class-properties"
+    "@babel/transform-runtime"
   ],
   "env": {
     "production-esm": {
       "presets": [
-        ["@babel/env", { "modules": false }],
+        ["@babel/env", {
+          "modules": false
+        }],
         "@babel/react"
       ],
       "plugins": [
-        ["@babel/transform-runtime", { "useESModules": true }],
-        "@babel/proposal-class-properties"
+        ["@babel/transform-runtime", { "useESModules": true }]
       ]
     }
   }
