--- a/test/.babelrc
+++ b/test/.babelrc
@@ -1,15 +1,11 @@
 {
   "presets": [
-    [
-      "@babel/env",
-      {
-        "modules": false
-      }
-    ],
+    ["@babel/env", {
+      "modules": false
+    }],
     "@babel/react"
   ],
   "plugins": [
-    "@babel/transform-runtime",
-    "@babel/proposal-class-properties"
+    "@babel/transform-runtime"
   ]
 }
