Update Yarn to 3.1.0

--- a/package.json
+++ b/package.json
@@ -114,5 +114,6 @@
     "type": "git",
     "url": "https://github.com/wojtekmaj/react-pdf.git"
   },
-  "funding": "https://github.com/wojtekmaj/react-pdf?sponsor=1"
+  "funding": "https://github.com/wojtekmaj/react-pdf?sponsor=1",
+  "packageManager": "yarn@3.1.0"
 }
