--- a/package.json
+++ b/package.json
@@ -104,10 +104,8 @@
     "semver@7.0.0": "^7.0.0"
   },
   "files": [
-    "LICENSE",
-    "README.md",
-    "dist/",
-    "src/"
+    "dist",
+    "src"
   ],
   "repository": {
     "type": "git",
