--- a/sample/parcel2/package.json
+++ b/sample/parcel2/package.json
@@ -4,6 +4,7 @@
   "description": "A sample page for React-PDF.",
   "private": true,
   "scripts": {
+    "copy-cmaps": "node ./scripts/copy-cmaps.js",
     "build": "parcel build index.html --public-url ./",
     "start": "parcel index.html"
   },
