--- a/test/.babelrc
+++ b/test/.babelrc
@@ -1,11 +1,12 @@
 {
   "presets": [
-    ["@babel/env", {
-      "modules": false
-    }],
+    [
+      "@babel/env",
+      {
+        "modules": false
+      }
+    ],
     "@babel/react"
   ],
-  "plugins": [
-    "@babel/transform-runtime"
-  ]
+  "plugins": ["@babel/transform-runtime"]
 }
