Fix install crashing
See https://github.com/yarnpkg/berry/issues/1356

--- a/sample/parcel/package.json
+++ b/sample/parcel/package.json
@@ -27,5 +27,10 @@
   },
   "resolutions": {
     "semver@7.0.0": "^7.0.0"
+  },
+  "dependenciesMeta": {
+    "parcel-bundler": {
+      "built": false
+    }
   }
 }
