Add documentation on standard fonts, update all samples to use standard fonts
Closes #961

--- a/sample/create-react-app-5/package.json
+++ b/sample/create-react-app-5/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.jsx",
   "scripts": {
     "copy-cmaps": "node ./scripts/copy-cmaps.js",
+    "copy-standard-fonts": "node ./scripts/copy-standard-fonts.js",
     "copy-worker": "node ./scripts/copy-worker.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
