--- a/sample/parcel/package.json
+++ b/sample/parcel/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "copy-cmaps": "node ./scripts/copy-cmaps.js",
+    "copy-standard-fonts": "node ./scripts/copy-standard-fonts.js",
     "build": "parcel build index.html --public-url ./",
     "start": "parcel index.html"
   },
