[breaking] Refactor TextLayer to use pdfjs.renderTextLayer (#944)
- Text layer alignment significantly improved
- New prop: enhanceTextSelection
- New prop: onRenderTextLayerError
- New prop: onRenderTextLayerSuccess

Breaking changes:
- onGetTextSuccess is now called with an object containing items and styles
- TextLayer.css must be imported for TextLayer to work properly

--- a/jest.config.json
+++ b/jest.config.json
@@ -9,6 +9,6 @@
     "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
     "pdfjs-dist/(.*)": "pdfjs-dist/legacy/$1"
   },
-  "setupFiles": ["<rootDir>/jest.setup.js"],
+  "setupFiles": ["jest-canvas-mock", "<rootDir>/jest.setup.js"],
   "testEnvironment": "<rootDir>/jest.env.js"
 }
