--- a/package.json
+++ b/package.json
@@ -92,8 +92,9 @@
     "eslint": "^8.5.0",
     "eslint-config-wojtekmaj": "^0.6.5",
     "husky": "^8.0.0",
-    "jest": "^27.0.0",
+    "jest": "^29.0.0",
     "jest-canvas-mock": "^2.3.1",
+    "jest-environment-jsdom": "^29.0.0",
     "prettier": "^2.5.0",
     "pretty-quick": "^3.1.0",
     "react": "^17.0.0",
