Update Prettier, use new --cache option

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint sample/ src/ test/ --ext .jsx,.js",
     "postinstall": "husky install",
     "prepack": "yarn clean && yarn build",
-    "prettier": "prettier --check .",
+    "prettier": "prettier --check . --cache",
     "test": "yarn lint && yarn prettier && yarn jest"
   },
   "keywords": [
@@ -96,7 +96,7 @@
     "jest": "^29.0.0",
     "jest-canvas-mock": "^2.3.1",
     "jest-environment-jsdom": "^29.0.0",
-    "prettier": "^2.5.0",
+    "prettier": "^2.7.0",
     "pretty-quick": "^3.1.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
