Simplify eslint command

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "rimraf dist",
     "copy-styles": "node ./copy-styles.js",
     "jest": "jest",
-    "lint": "eslint sample/ src/ test/ --ext .jsx,.js",
+    "lint": "eslint sample src test --ext .jsx,.js",
     "postinstall": "husky install",
     "prepack": "yarn clean && yarn build",
     "prettier": "prettier --check . --cache",
